[feat] CreateCollaboratorRoute
