# src/modules/collaborators/dtos/ICollaboratorDTO.ts
@@ -1,5 +1,7 @@
+import { JobPosition } from "../entities/Collaborator";
+
 export interface ICollaboratorDTO {
   user_id: number;
   company_id: number;
-  job_position_id: number;
+  job_position: JobPosition;
 }
