# src/swagger.json
@@ -652,15 +652,15 @@
                   "company_id": {
                     "type": "integer"
                   },
-                  "job_position_id": {
-                    "type": "integer"
+                  "job_position": {
+                    "type": "string"
                   }
                 }
               },
               "example": {
                 "user_id": "1",
                 "company_id": "2",
-                "job_position_id": "3"
+                "job_position": "Empregado"
               }
             }
           }
